# Dorpsgek

./: Cargo.toml
dorpsgek/: Cargo.toml
dorpsgek-movegen/: Cargo.toml  TODO
dorpsgek-movegen/benches/: makemove.rs  perft.rs
dorpsgek-movegen/examples/: perft.rs
dorpsgek-movegen/src/: chessmove.rs  colour.rs  lib.rs  piece.rs  square.rs
dorpsgek-movegen/src/board/: bitlist.rs  data.rs  index.rs  mod.rs  piecelist.rs  piecemask.rs
dorpsgek/benches/: search.rs
dorpsgek/examples/: search.rs  tune.rs
dorpsgek/src/: eval.rs  lib.rs  search.rs  tune.rs
revad/src/: tape.rs
