[package]
name = "dorpsgek-movegen"
version = "0.1.0"
authors = ["Dan Ravensloft <dan.ravensloft@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyvec = "0.3"
once_cell = "1.4"

[dev-dependencies]
criterion = "0.3"
criterion-cpu-time = "0.1.0"

[[bench]]
name = "makemove"
harness = false