[package]
name = "dorpsgek"
version = "0.1.0"
authors = ["Dan Ravensloft <dan.ravensloft@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dorpsgek-movegen = { path = "../dorpsgek-movegen" }
tinyvec = "0.3"